--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-select": "^3.0.8",
+    "react-toggle-button": "^2.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0"
